# TaintFlowAnalysis

./: BuildGraph.h  FunctionInfo.cpp  FunctionInfo.h  InputValues.cpp  InputValues.h  Makefile  README.md  TaintAnalysis.cpp  ex1_caller_callee.txt  install.sh  libcallSummary.cpp  libcallSummary.h  sourcefile.txt
DSA/AssistDS/: CMakeLists.txt  DSNodeEquivs.cpp  Devirt.cpp  DynCount.cpp  GEPExprArgs.cpp  Int2PtrCmp.cpp  MergeGEP.cpp  SimplifyGEP.cpp  TypeChecks.cpp
DSA/DSA/: BottomUpClosure.cpp  CMakeLists.txt  CallTargets.cpp  DataStructureStats.cpp  Local.cpp  Makefile  Printer.cpp  TopDownClosure.cpp  TypeSafety.cpp
DSAHeaders/assistDS/: Devirt.h  Int2PtrCmp.h  SimplifyGEP.h  TypeChecks.h
DSAHeaders/dsa/: CallTargets.h  DSCallGraph.h  DataStructure.h  TypeSafety.h  keyiterator.h
DataFlowAnalysis/: CMakeLists.txt  CallGraphWrapper.cpp  CallGraphWrapper.h  ChopControlModule.cpp  ChopControlModule.h  DataDepGraph.cpp  DataDepGraph.h  FlowGraph.cpp  FlowGraph.h  InputDep.cpp  InputDep.h  Makefile  README.md  TaintFlow.cpp  TaintFlow.h  source_sink.txt
HexDecompilerScripts/: conversion.py  convert.py  defs.h  example.h
Scripts/AutomationScripts/: analysis-script.py
Scripts/AutomationScripts/Sample/: analysis_config.txt  article-list.txt
Scripts/HexDecompilerScripts/: conversion.py  headers.py  scope-resolution.py
Scripts/MediatorScripts/: countMedInstucts.py  findTaintedCmp.py
TaintAnalysis/: AliasSets.cpp  AliasSets.h  AliasSetsIza.cpp  AliasSetsIza.h  BasicAliasAnalysisNew.txt  BuildGraph.cpp  BuildGraph.h  CMakeLists.txt  CallGraphWrapper.cpp  CallGraphWrapper.h  CallGraphWrapper_orig.cpp  CallGraphWrapper_orig.h  ControlDependenceGraph.cpp  ControlDependenceGraph.h  FPAnalysis.cpp  FPAnalysis.h  FlowGraph.cpp  FlowGraph.h  InputDep.cpp  InputDep.h  InputValues.cpp  InputValues.h  MacRun.sh  Makefile  PADriver.cpp  PADriver.h  PointerAnalysis.cpp  ProcessControlDep.cpp  ProcessControlDep.h  README.md  Run.sh  RunMake.sh  RunProg.sh  TaintAnalysis.h  TaintFlow.cpp  TaintFlow.h  blockAssign.cpp  blockAssign.h  computesso.cpp  example2.bc  (+12 more)
TaintAnalysis/rapidxml/: rapidxml.hpp
inputFiles/: TaintInput.txt  fields.txt  mediator.txt  queries.txt  source_sink.txt
